static/css/custom.css
.stamp-xl {
  min-width: 3rem;
  height: 3rem;
  line-height: 3rem;
}

/* IE specific fix */
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .card--ie-773px {
     width: 773px;
  }
}

.zebra  {
    background: #f8f9fa;
}

.flex-row-container {
    display: flex;
    flex-direction: row;
}

/* questionnaires Vue components */
.form-control-h3 {
    font-size: 1.125rem;
    font-weight: 400;
}

.form-label-h3 {
    margin-bottom: 0px;
}

.preview {
    background: rgba(70, 127, 207, 0.04) url(../img/apercu.png);
    padding: 1.5rem;
}

.with-line-breaks {
    white-space: pre-wrap;
}

.draft {
    background: rgba(70, 127, 207, 0.04)
}

/* datepicker : make it blue */
.blue .vdp-datepicker__calendar .cell.selected,
.blue .vdp-datepicker__calendar .cell.selected.highlighted,
.blue .vdp-datepicker__calendar .cell.selected:hover {
    background: #467fcf;
    color: #fff;
}

.blue .vdp-datepicker__calendar .cell:not(.blank):not(.disabled).day:hover,
.blue .vdp-datepicker__calendar .cell:not(.blank):not(.disabled).month:hover,
.blue .vdp-datepicker__calendar .cell:not(.blank):not(.disabled).year:hover {
    border: 1px solid #467fcf;
}

